--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -207,7 +207,7 @@
       elem.addClass("glyphicon-floppy-saved");
     }
 
-    // Populate the input selection with te URLs.
+    // Populate the input selection with the URLs.
     function displayDropdownURLs() {
       let elem = $("#url_dropdown");
       homepages.all().forEach( function(obj, index) {
