add 'browser' website

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -55,7 +55,6 @@
       height: 100%;
       width: 50%;
       position: fixed;
-      z-index: 1;
       top: 0;
       overflow-x: hidden;
       padding-top: 20px;
@@ -85,15 +84,21 @@
   </header>
   <div class="contents">
     <div class="split left">
-      <a class="centered big_hitbox" href="/tagging">
-        <h2>Tagging</h2>
-        <p>Open the user tagging web UI</p>
-      </a>
-    </div>
-    <div class="split right">
       <a class="centered big_hitbox" href="/index.html">
         <h2>Viewing</h2>
         <p>View the output website</p>
+      </a>
+    </div>
+    <div class="split right">
+      <a class="centered big_hitbox" href="/tagging">
+        <h2>Tagging</h2>
+        <p>Open the user tagging website</p>
+      </a>
+    </div>
+    <div>
+      <a class="centered big_hitbox" href="browser/index.html">
+        <h2>Browsing</h2>
+        <p>View the tag browser</p>
       </a>
     </div>
   </div>
