--- a/web/views/tagging.erb
+++ b/web/views/tagging.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"></meta>
     <title>Tildeverse Tags</title>
-    <script src="https://tilde.town/~nossidge/jquery/src/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://tilde.town/~nossidge/zelda/holy_grail.css">
@@ -23,7 +23,12 @@
           USERS.initialize(data);
 
           // By default, filter for only newly updated users.
-          TOGGLE_GROUPS.toggleNewlyUpdated();
+          // If none found, filter for users who have never been tagged.
+          if (FILTER_FUNCTIONS.getNewlyUpdated().length != 0) {
+            TOGGLE_GROUPS.toggleNewlyUpdated();
+          } else {
+            TOGGLE_GROUPS.toggleNeverTagged();
+          }
 
           // Navigate to a random URL.
           URL_NAVIGATION.randomUrl();
