--- a/web/views/index.erb
+++ b/web/views/index.erb
@@ -3,8 +3,8 @@
  <head>
   <meta charset="UTF-8"></meta>
   <title>Tildeverse</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link href="https://tilde.town/~nossidge/zelda/holy_grail.css" rel="stylesheet">
+  <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
+  <link rel="stylesheet" href="vendor/css/holy_grail.css">
   <style type="text/css">
     body {
       min-height: 100vh;
