website: add help text to browser

--- a/web/views/tagging.erb
+++ b/web/views/tagging.erb
@@ -120,7 +120,7 @@
           </div>
         </div>
       </div>
-      <iframe id="col_middle" class="col_middle border" name="tildesite"></iframe>
+      <iframe class="col_middle border" name="tildesite"></iframe>
     </div>
   </body>
 </html>
