include vendor scripts used by public index.html

--- a/web/views/index.erb
+++ b/web/views/index.erb
@@ -80,7 +80,7 @@
  </head>
  <body class="border centre_text">
   <header>
-    <h1>Tildeverse Server</h1>
+    <h1>Tildeverse Directory Server</h1>
   </header>
   <div class="contents">
     <div class="split left">
