--- a/web/views/tagging.erb
+++ b/web/views/tagging.erb
@@ -87,7 +87,7 @@
                  readonly="readonly"
                  onfocus="this.focus();this.select()"
           />
-          <div id="filters" class="btn-group btn-group-lg">
+          <div id="filters_two" class="btn-group btn-group-lg">
             <a id="filter_by_never_tagged"
                title="Filter for users who have never been tagged"
                class="btn btn-default btn-lg top_button top_button_right"
