--- a/web/views/tagging.erb
+++ b/web/views/tagging.erb
@@ -45,7 +45,7 @@
         <div class="header_title input-group-lg">
           <input id="text_user"
                  type="text"
-                 class="form-control"
+                 class="form-control centre_text"
                  readonly="readonly"
                  onfocus="this.focus();this.select()"
           />
@@ -83,7 +83,7 @@
           </select>
           <input id="text_counter"
                  type="text"
-                 class="form-control input-lg"
+                 class="form-control input-lg centre_text"
                  readonly="readonly"
                  onfocus="this.focus();this.select()"
           />
