resize button heights to match window view

--- a/web/views/tagging.erb
+++ b/web/views/tagging.erb
@@ -33,9 +33,13 @@
           // Navigate to a random URL.
           URL_NAVIGATION.randomUrl();
 
+          // Correct the button heights.
+          ACCESSIBILITY.fixHeights();
         });
-
       });
+
+      // Correct the button heights.
+      $(window).resize(ACCESSIBILITY.fixHeights);
 
     </script>
   </head>
